--- a/styles/colors-base.less
+++ b/styles/colors-base.less
@@ -289,7 +289,9 @@
 // MediaPlayer
 // ---------------------------------------
 @agate-mediacontrols-button-disabled-opacity: @agate-button-disabled-opacity;
+@agate-mediacontrols-shuffle-button-color: @agate-accent;
 @agate-mediaslider-bar-color: inherit;
+@agate-mediaslider-fill-bg-color: inherit;
 @agate-mediaslider-fill-bg-image: inherit;
 @agate-mediaslider-focused-bar-color: inherit;
 @agate-mediaslider-paused-bg-image: none;
