--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -558,10 +558,10 @@
 @agate-mediacontrols-button-bg-border: inherit;
 @agate-mediacontrols-button-bg-height: inherit;
 @agate-mediacontrols-button-icon-padding: inherit;
-@agate-mediacontrols-button-margin: inherit;
-@agate-mediacontrols-button-min-width: inherit;
+@agate-mediacontrols-button-margin: 0 30px;
+@agate-mediacontrols-button-min-width: @agate-button-height;
 @agate-mediacontrols-button-size: inherit;
-@agate-mediacontrols-icon-font-size: inherit;
+@agate-mediacontrols-icon-font-size: 60px;
 @agate-mediacontrols-icon-height: @agate-icon-size;
 @agate-mediacontrols-icon-margin: inherit;
 @agate-mediacontrols-icon-padding: inherit;
@@ -575,12 +575,12 @@
 @agate-mediacontrols-tiny-playpause-icon-font-size: @agate-mediacontrols-playpause-icon-font-size;
 @agate-mediacontrols-tiny-playpause-icon-height: @agate-mediacontrols-playpause-icon-height;
 @agate-mediacontrols-playpause-button-bg-border-radius: inherit;
-@agate-mediacontrols-playpause-button-height: inherit;
+@agate-mediacontrols-playpause-button-height: 90px;
 @agate-mediacontrols-playpause-button-margin: 12px;
 @agate-mediacontrols-playpause-icon-height: 48px;
 @agate-mediacontrols-playpause-icon-font-size: (@agate-mediacontrols-playpause-icon-height * 2);
 @agate-mediacontrols-playpause-icon-padding: 0;
-@agate-mediaplayer-height: auto;
+@agate-mediaplayer-height: inherit;
 @agate-mediaplayer-tiny-height: @agate-mediaplayer-height;
 @agate-mediaplayer-tiny-times-font-size: @agate-mediaplayer-times-font-size;
 @agate-mediaplayer-tiny-times-padding: inherit;
@@ -588,6 +588,7 @@
 @agate-mediaplayer-times-font-size: inherit;
 @agate-mediaplayer-times-line-height: inherit;
 @agate-mediaplayer-times-margin: inherit;
+@agate-mediaplayer-times-padding-top: 9px;
 @agate-mediaslider-padding: @agate-slider-horizontal-padding;
 @agate-mediaslider-tiny-bar-height: @agate-slider-track-height;
 @agate-mediaslider-tiny-height: @agate-slider-height;
