--- a/styles/variables-gallium.less
+++ b/styles/variables-gallium.less
@@ -125,8 +125,6 @@
 // MediaPlayer
 // ---------------------------------------
 @agate-mediacontrols-button-bg-border: transparent;
-@agate-mediacontrols-button-bg-height: 60px;
-@agate-mediacontrols-button-icon-padding: 0;
 @agate-mediacontrols-button-margin: 0 30px 0 30px;
 @agate-mediacontrols-button-min-width: 60px;
 @agate-mediacontrols-button-size: 60px;
@@ -141,6 +139,7 @@
 @agate-mediaplayer-times-font-size: 27px;
 @agate-mediaplayer-times-line-height: 36px;
 @agate-mediaplayer-times-margin: 0 12px 0 12px;
+@agate-mediaplayer-times-padding-top: 0;
 
 // Panels
 // ---------------------------------------
