--- a/styles/variables-silicon.less
+++ b/styles/variables-silicon.less
@@ -341,10 +341,7 @@
 // ---------------------------------------
 @agate-mediacontrols-bottom: 15px;
 @agate-mediacontrols-button-bg-border: transparent;
-@agate-mediacontrols-button-bg-height: 90px;
-@agate-mediacontrols-button-icon-padding: 0;
 @agate-mediacontrols-button-margin: 0 21px 0 18px;
-@agate-mediacontrols-button-min-width: 90px;
 @agate-mediacontrols-button-size: 90px;
 @agate-mediacontrols-icon-font-size: (@agate-mediacontrols-icon-height * 2);
 @agate-mediacontrols-icon-height: 69px;
@@ -359,22 +356,21 @@
 @agate-mediacontrols-tiny-icon-height: 39px;
 @agate-mediacontrols-tiny-playpause-icon-font-size: (@agate-mediacontrols-tiny-playpause-icon-height * 2);
 @agate-mediacontrols-tiny-playpause-icon-height: 60px;
-@agate-mediacontrols-playpause-button-bg-border-radius: 111px;
-@agate-mediacontrols-playpause-button-height: 111px;
-@agate-mediacontrols-playpause-icon-height: 102px;
+@agate-mediacontrols-playpause-button-bg-border-radius: 90px;
 @agate-mediacontrols-playpause-button-margin: 0 36px 0 24px;
-@agate-mediaplayer-height: 279px;
+@agate-mediacontrols-playpause-icon-font-size: 120px;
+@agate-mediacontrols-playpause-icon-height: 102px;
 @agate-mediaplayer-tiny-height: 141px;
 @agate-mediaplayer-tiny-times-font-size: 24px;
 @agate-mediaplayer-min-width: 450px;
-@agate-mediaplayer-times-font-size: 33px;
-@agate-mediaplayer-times-line-height: 48px;
-@agate-mediaplayer-times-margin: 0;
-@agate-mediaplayer-tiny-times-padding: 0 45px;
+@agate-mediaplayer-times-line-height: 36px;
+@agate-mediaplayer-times-padding: 0 21px;
+@agate-mediaplayer-times-padding-top: 0px;
 @agate-mediaslider-padding: 45px 3px;
 @agate-mediaslider-tiny-bar-height: 3px;
 @agate-mediaslider-tiny-height: 36px;
 @agate-mediaslider-tiny-padding: 15px 45px;
+@agate-mediaplayer-tiny-times-padding: 0 45px;
 
 // Panels
 // ---------------------------------------
